js-js-ajax-api-musica

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script id="template" type="text/x-handlebars-template">
-      <div class="cd" data-genre="{{ genre }}">
+      <div class="cd">
           <img src="{{ poster }}" alt="photo album">
           <h3>{{ title }}</h3>
           <span class="author">{{ author }}</span>
